<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="adViewMain_unit_id">ca-app-pub-5003722913489978/8925549640</string>
    <string name="adViewMailAdded_unit_id">ca-app-pub-5003722913489978/1118553640</string>
    <string name="adViewSenderList_unit_id">ca-app-pub-5003722913489978/2595286843</string>
    <string name="adViewSenderDetail_unit_id">ca-app-pub-5003722913489978/4072020045</string>
    <string name="adViewInbox_unit_id">ca-app-pub-5003722913489978/7836934848</string>
    <string name="app_name">FW2me</string>
    <string name="action_register">REGISTER</string>
    <string name="bt_register">Click For Register</string>
    <string name="btOk">OK</string>
    <string name="btCancel">Cancel</string>
    <string name="btCopy">Copy</string>
    <string name="firstSenderName">First Contact\'s Name</string>
    <string name="emailaddresscopied">E-mail address copied</string>
    <string name="action_login">LOGIN</string>
    <string name="bt_login">I Have An Account</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Quit</string>
    <string name="action_mymailsenders">Contacts</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="password2">Password (Again)</string>
    <string name="action_myhiddenmails">To Mails</string>
    <string name="action_help">Help</string>
    <string name="btActive1">SET ACTIVATE</string>
    <string name="btActive2">SET INACTIVE</string>
    <string name="lbActive">(Inactive)</string>
    <string name="title">Title</string>
    <string name="undefined">Untitled</string>
    <string name="addnewmail">Create New E-Mail</string>
    <string name="SenderPaused">Contact blocked. You wont receive any email from %s</string>
    <string name="SenderResume">Block removed. You can receive email from %s</string>
    <string name="Name">Name</string>
    <string name="fw2meemail">For sent e-mail</string>
    <string name="CreatedDT">Create Date</string>
    <string name="NoMyMail">You didn\'t create a mail yet. For create a new one touch + sign.</string>
    <string name="NoSender">No incoming e-mail for this address yet.</string>
    <string name="YourMails">Your mails</string>
    <string name="PleaseWait">Please wait</string>
    <string name="OfflineUsage">Offline Usage</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="eMailConfReqTitle">E-Mail confirmation required</string>
    <string name="eMailConfReqDesc">We have sent you an email to the email address you entered. You must confirm your subscription by clicking on the link in that email. Would you like to send another confirmation mail? (Previous confirmation mails will be invalid)</string>
    <string name="btInbox">Inbox</string>
    <string name="MailForwarded">Mail forwarded!</string>
    <string name="tvInboxHeaderFromTitle">From : </string>
    <string name="tvInboxHeaderToTitle">To : </string>
    <string name="tvInboxHeaderCountTitle">E-Mail Count : </string>
    <string name="tvInboxHeader">You can choose to e-mail you want to FW</string>
    <string name="btForgotPassword">Forgot your password?</string>
    <string name="ResetPasswordLink">Your password reset mail has been sent</string>
    <string name="scr_MainActivity">Main Screen</string>
    <string name="scr_Inbox">Inbox</string>
    <string name="scr_MailAddedActivity">Mail Detail</string>
    <string name="scr_MyMailSenders">Contact List</string>
    <string name="scr_SenderDetail">Contact Detail</string>
        
</resources>
