<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/iv_banner"
            android:layout_width="300sp"
            android:layout_height="150sp"
            android:layout_alignParentTop="true"
            android:src="@drawable/banner2" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_weight="0.57"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:text="@string/email"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17sp"
            android:text="@string/action_login"
            android:textColor="#FFFFFFFF" />

        <TextView
            android:id="@+id/btForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btForgotPassword"
            android:textColor="#000000"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_seperator"
            android:layout_width="fill_parent"
            android:layout_height="3sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5sp"
            android:src="@drawable/seperator_h" />

        <TextView
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/bt_register"
            android:textColor="#000000"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>